--- a/native-image-tests/build.gradle
+++ b/native-image-tests/build.gradle
@@ -20,7 +20,7 @@ dependencies {
   implementation project(':mockwebserver-deprecated')
   implementation project(':okhttp-urlconnection')
   implementation project(':mockwebserver-junit4')
-  implementation project(':mockwebserver-junit5')
+  testRuntimeOnly project(':mockwebserver-junit5')
   implementation deps.bndResolve
   implementation deps.junit5Api
 
