--- a/samples/compare/build.gradle
+++ b/samples/compare/build.gradle
@@ -1,8 +1,8 @@
 dependencies {
-  implementation project(':okhttp')
-  implementation project(':mockwebserver-deprecated')
-  implementation project(':okhttp-tls')
-
+  testImplementation project(':okhttp')
+  testImplementation project(':okhttp-tls')
+  testImplementation project(':mockwebserver')
+  testRuntime project(':mockwebserver-junit5')
   testImplementation project(':okhttp-testing-support')
   testImplementation 'org.apache.httpcomponents.client5:httpclient5:5.0'
   testImplementation 'org.eclipse.jetty:jetty-client:9.4.27.v20200227'
