--- a/native-image-tests/build.gradle
+++ b/native-image-tests/build.gradle
@@ -42,8 +42,11 @@ animalsniffer {
 if (!properties.containsKey('android.injected.invoked.from.ide')) {
   sourceSets {
     // Not included in IDE as this confuses Intellij for obvious reasons.
+    main.java.srcDirs += project.file("../okhttp-brotli/src/test/java")
+    main.java.srcDirs += project.file("../okhttp-dnsoverhttps/src/test/java")
     main.java.srcDirs += project.file("../okhttp-logging-interceptor/src/test/java")
     main.java.srcDirs += project.file("../okhttp-sse/src/test/java")
+    main.java.srcDirs += project.file("../okhttp-tls/src/test/java")
   }
 }
 
