--- a/native-image-tests/build.gradle
+++ b/native-image-tests/build.gradle
@@ -42,7 +42,7 @@ animalsniffer {
   ignoreFailures = true
 }
 
-//if (!properties.containsKey('android.injected.invoked.from.ide')) {
+if (!properties.containsKey('android.injected.invoked.from.ide')) {
   sourceSets {
     // Not included in IDE as this confuses Intellij for obvious reasons.
     main.java.srcDirs += project.file("../okhttp/src/test/java")
@@ -51,7 +51,7 @@ animalsniffer {
     main.java.srcDirs += project.file("../okhttp-logging-interceptor/src/test/java")
     main.java.srcDirs += project.file("../okhttp-sse/src/test/java")
   }
-//}
+}
 
 graal {
   mainClass "okhttp3.RunTestsKt"
