--- a/native-image-tests/build.gradle
+++ b/native-image-tests/build.gradle
@@ -66,6 +66,7 @@ graal {
   option "-H:+ReportExceptionStackTraces"
   option "-H:+TraceClassInitialization"
   option "--initialize-at-build-time=kotlin.text.Charsets"
+  option "-H:EnableURLProtocols=http,https"
 
   if (Os.isFamily(Os.FAMILY_WINDOWS)) {
     // May be possible without, but autodetection is problematic on Windows 10
