Add more n-i-t tests from okhttp (#6387)

--- a/native-image-tests/build.gradle
+++ b/native-image-tests/build.gradle
@@ -25,6 +25,7 @@ dependencies {
   implementation project(':mockwebserver-junit5')
   implementation deps.bndResolve
   implementation deps.junit5Api
+  implementation deps.junit5JupiterParams
 
   implementation("org.graalvm.nativeimage:svm:20.2.0") {
     // https://youtrack.jetbrains.com/issue/KT-29513
@@ -44,6 +45,7 @@ animalsniffer {
 if (!properties.containsKey('android.injected.invoked.from.ide')) {
   sourceSets {
     // Not included in IDE as this confuses Intellij for obvious reasons.
+    main.java.srcDirs += project.file("../okhttp/src/test/java")
     main.java.srcDirs += project.file("../okhttp-brotli/src/test/java")
     main.java.srcDirs += project.file("../okhttp-dnsoverhttps/src/test/java")
     main.java.srcDirs += project.file("../okhttp-logging-interceptor/src/test/java")
@@ -64,6 +66,7 @@ graal {
   option "-H:+ReportExceptionStackTraces"
   option "-H:+TraceClassInitialization"
   option "--initialize-at-build-time=kotlin.text.Charsets"
+  option "-H:EnableURLProtocols=http,https"
 
   if (Os.isFamily(Os.FAMILY_WINDOWS)) {
     // May be possible without, but autodetection is problematic on Windows 10
