Fix publicsuffixes in native image (#6395)

--- a/okhttp/src/main/resources/META-INF/native-image/okhttp/okhttp/resource-config.json
+++ b/okhttp/src/main/resources/META-INF/native-image/okhttp/okhttp/resource-config.json
@@ -1,5 +1,5 @@
 {
   "resources": [
-    {"pattern": "publicsuffixes.gz"}
+    {"pattern": "okhttp3/internal/publicsuffix/publicsuffixes.gz"}
   ]
 }
