Avoid duplicate source roots in Intellij (#6397)
* Avoid duplicate source roots in Intellij

* Avoid duplicate source roots in Intellij

--- a/native-image-tests/build.gradle
+++ b/native-image-tests/build.gradle
@@ -42,7 +42,9 @@ animalsniffer {
   ignoreFailures = true
 }
 
-if (!properties.containsKey('android.injected.invoked.from.ide')) {
+def isIDE = properties.containsKey('android.injected.invoked.from.ide') ||
+        (System.getenv("XPC_SERVICE_NAME") ?: "").contains("intellij")
+if (!isIDE) {
   sourceSets {
     // Not included in IDE as this confuses Intellij for obvious reasons.
     main.java.srcDirs += project.file("../okhttp/src/test/java")
