Fix windows IDE detection

--- a/native-image-tests/build.gradle
+++ b/native-image-tests/build.gradle
@@ -43,7 +43,8 @@ animalsniffer {
 }
 
 def isIDE = properties.containsKey('android.injected.invoked.from.ide') ||
-        (System.getenv("XPC_SERVICE_NAME") ?: "").contains("intellij")
+        (System.getenv("XPC_SERVICE_NAME") ?: "").contains("intellij") ||
+        System.getenv("IDEA_INITIAL_DIRECTORY") != null
 if (!isIDE) {
   sourceSets {
     // Not included in IDE as this confuses Intellij for obvious reasons.
