Fix Android tests

--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,9 @@ buildscript {
       'android': "org.robolectric:android-all:11-robolectric-6757853",
       'animalSniffer': "org.codehaus.mojo:animal-sniffer-annotations:${versions.animalSniffer}",
       'assertj': "org.assertj:assertj-core:${versions.assertj}",
-      'bouncycastle': "org.bouncycastle:bcprov-jdk15on:${versions.bouncycastle}",
-      'bouncycastlepkix': "org.bouncycastle:bcpkix-jdk15on:${versions.bouncycastle}",
-      'bouncycastletls': "org.bouncycastle:bctls-jdk15on:${versions.bouncycastle}",
+      'bouncycastle': "org.bouncycastle:bcprov-jdk15to18:${versions.bouncycastle}",
+      'bouncycastlepkix': "org.bouncycastle:bcpkix-jdk15to18:${versions.bouncycastle}",
+      'bouncycastletls': "org.bouncycastle:bctls-jdk15to18:${versions.bouncycastle}",
       'brotli': "org.brotli:dec:${versions.brotli}",
       'conscrypt': "org.conscrypt:conscrypt-openjdk-uber:${versions.conscrypt}",
       'corretto': "software.amazon.cryptools:AmazonCorrettoCryptoProvider:${versions.corretto}:linux-x86_64",
