--- a/android-test/build.gradle
+++ b/android-test/build.gradle
@@ -25,7 +25,7 @@ android {
 
   defaultConfig {
     minSdkVersion 21
-    targetSdkVersion 29
+    targetSdkVersion 30
     versionCode 1
     versionName "1.0"
 
@@ -45,16 +45,16 @@ dependencies {
     exclude group: 'org.conscrypt', module: 'conscrypt-openjdk-uber'
     exclude group: 'software.amazon.cryptools', module: 'AmazonCorrettoCryptoProvider'
   }
-  androidTestImplementation "org.bouncycastle:bcprov-jdk15on:${versions.bouncycastle}"
-  androidTestImplementation "org.bouncycastle:bctls-jdk15on:${versions.bouncycastle}"
-  androidTestImplementation "org.conscrypt:conscrypt-android:2.5.0"
+  androidTestImplementation "org.bouncycastle:bcprov-jdk15to18:${versions.bouncycastle}"
+  androidTestImplementation "org.bouncycastle:bctls-jdk15to18:${versions.bouncycastle}"
+  androidTestImplementation "org.conscrypt:conscrypt-android:2.5.1"
   androidTestImplementation project(':mockwebserver-deprecated')
   androidTestImplementation project(':okhttp-tls')
   androidTestImplementation project(':okhttp-dnsoverhttps')
   androidTestImplementation project(':okhttp-logging-interceptor')
-  androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+  androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
   androidTestImplementation 'org.apache.httpcomponents.client5:httpclient5:5.0'
-  androidTestImplementation 'com.squareup.moshi:moshi:1.9.2'
-  androidTestImplementation 'com.squareup.moshi:moshi-kotlin:1.9.2'
+  androidTestImplementation 'com.squareup.moshi:moshi:1.11.0'
+  androidTestImplementation 'com.squareup.moshi:moshi-kotlin:1.11.0'
 }
