--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,7 @@ if (properties.containsKey('android.injected.invoked.from.ide') ||
         System.getenv('ANDROID_SDK_ROOT') != null) {
   // Currently incompatible with Intellij, use with Android Studio and from CLI with explicit flag
   include ':android-test'
+  include ':regression-test'
 }
 
 include ':native-image-tests'
