--- a/settings.gradle
+++ b/settings.gradle
@@ -5,12 +5,12 @@ include ':mockwebserver-deprecated'
 include ':mockwebserver-junit4'
 include ':mockwebserver-junit5'
 
-//if (properties.containsKey('android.injected.invoked.from.ide') ||
-//        System.getenv('ANDROID_SDK_ROOT') != null) {
+if (properties.containsKey('android.injected.invoked.from.ide') ||
+        System.getenv('ANDROID_SDK_ROOT') != null) {
   // Currently incompatible with Intellij, use with Android Studio and from CLI with explicit flag
   include ':android-test'
   include ':regression-test'
-//}
+}
 
 include ':native-image-tests'
 
