--- a/samples/guide/build.gradle
+++ b/samples/guide/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-kapt'
 dependencies {
   implementation project(':okhttp')
   implementation project(':mockwebserver-deprecated')
+  implementation project(':okhttp-testing-support')
   implementation project(':okhttp-tls')
   implementation deps.animalSniffer
   implementation deps.moshi
