Switch tests to java for source compatibility

--- a/regression-test/build.gradle
+++ b/regression-test/build.gradle
@@ -34,12 +34,15 @@ android {
   }
 }
 
+def okhttplegacyversion = "3.12.12"
+//def okhttplegacyversion = "4.9.0"
+
 dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${versions.kotlin}"
   implementation "org.jetbrains.kotlin:kotlin-reflect:${versions.kotlin}"
   implementation 'com.google.android.gms:play-services-safetynet:17.0.0'
-  implementation "com.squareup.okhttp3:okhttp:3.12.12"
-  androidTestImplementation("com.squareup.okhttp3:mockwebserver:3.12.12")
+  implementation "com.squareup.okhttp3:okhttp:${okhttplegacyversion}"
+  androidTestImplementation("com.squareup.okhttp3:mockwebserver:${okhttplegacyversion}")
   androidTestImplementation "org.bouncycastle:bcprov-jdk15to18:${versions.bouncycastle}"
   androidTestImplementation "org.bouncycastle:bctls-jdk15to18:${versions.bouncycastle}"
   androidTestImplementation 'androidx.test.ext:junit:1.1.2'
