Let's exncrypt regression test

--- a/android-test/build.gradle
+++ b/android-test/build.gradle
@@ -47,6 +47,7 @@ android {
     exclude("META-INF/LICENSE.md")
     exclude("META-INF/LICENSE-notice.md")
     exclude("README.txt")
+    exclude("org/bouncycastle/LICENSE")
   }
 
   compileSdkVersion 30
