--- a/regression-test/build.gradle
+++ b/regression-test/build.gradle
@@ -42,7 +42,10 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-reflect:${versions.kotlin}"
   implementation 'com.google.android.gms:play-services-safetynet:17.0.0'
   implementation "com.squareup.okhttp3:okhttp:${okhttplegacyversion}"
-  androidTestImplementation("com.squareup.okhttp3:mockwebserver:${okhttplegacyversion}")
+  implementation("com.squareup.okhttp3:okhttp-tls:${okhttplegacyversion}") {
+    exclude group: 'org.bouncycastle'
+  }
+  androidTestImplementation "com.squareup.okhttp3:mockwebserver:${okhttplegacyversion}"
   androidTestImplementation "org.bouncycastle:bcprov-jdk15to18:${versions.bouncycastle}"
   androidTestImplementation "org.bouncycastle:bctls-jdk15to18:${versions.bouncycastle}"
   androidTestImplementation 'androidx.test.ext:junit:1.1.2'
