Attempt to run all tests on Android

--- a/android-test/build.gradle
+++ b/android-test/build.gradle
@@ -71,7 +71,7 @@ android {
     }
   }
 
-  if (isIDE) {
+  if (!isIDE) {
     sourceSets {
       named("androidTest") {
         it.java.srcDirs += project.file("../okhttp/src/test/java")
