--- a/build.gradle
+++ b/build.gradle
@@ -229,10 +229,8 @@ subprojects { project ->
     // Add alpn-boot on Java 8 so we can use HTTP/2 without a stable API.
     def alpnBootVersion = alpnBootVersion()
     if (alpnBootVersion != null) {
-      dependencies {
-        testCompile "org.mortbay.jetty.alpn:alpn-boot:$alpnBootVersion"
-      }
-      def alpnBootJar = configurations.testCompile.find { it.name.startsWith("alpn-boot-") }
+      def alpnBootJar = configurations.detachedConfiguration(
+              dependencies.create("org.mortbay.jetty.alpn:alpn-boot:$alpnBootVersion")).singleFile
       test {
         jvmArgs += "-Xbootclasspath/p:${alpnBootJar}"
       }
