Fix jdk8 with alpn-boot

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -275,8 +275,7 @@ workflows:
       - testjdk8alpn:
           filters:
             branches:
-              ignore:
-                - gh-pages
+              only: master
       - testjdk11:
           filters:
             branches:
