--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
       'junit5': '5.7.0',
       'kotlin': '1.4.20',
       'moshi': '1.11.0',
-      'okio': '2.9.0',
+      'okio': '2.10.0-SNAPSHOT',
       'ktlint': '0.38.0',
       'picocli': '4.5.1',
       'openjsse': '1.1.0',
@@ -58,7 +58,7 @@ buildscript {
   ]
 
   dependencies {
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.20"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.21"
     classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.10.1"
     classpath "com.android.tools.build:gradle:4.0.2"
     classpath deps.bnd
@@ -114,6 +114,12 @@ allprojects {
     mavenCentral()
     maven {
       url 'https://dl.bintray.com/kotlin/dokka'
+    }
+    maven {
+      url 'https://oss.sonatype.org/content/repositories/snapshots'
+    }
+    maven {
+      url 'https://kotlin.bintray.com/kotlinx/'
     }
     google()
   }
