--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
       'junit5': '5.7.0',
       'kotlin': '1.4.20',
       'moshi': '1.11.0',
-      'okio': '2.10.0-SNAPSHOT',
+      'okio': '3.0.0-alpha.1',
       'ktlint': '0.38.0',
       'picocli': '4.5.1',
       'openjsse': '1.1.0',
@@ -50,6 +50,7 @@ buildscript {
       'moshi': "com.squareup.moshi:moshi:${versions.moshi}",
       'moshiKotlin': "com.squareup.moshi:moshi-kotlin-codegen:${versions.moshi}",
       'okio': "com.squareup.okio:okio:${versions.okio}",
+      'okioFakeFilesystem': "com.squareup.okio:okio-fakefilesystem:${versions.okio}",
       'openjsse': "org.openjsse:openjsse:${versions.openjsse}",
       'bnd': "biz.aQute.bnd:biz.aQute.bnd.gradle:${versions.bnd}",
       'bndResolve': "biz.aQute.bnd:biz.aQute.resolve:${versions.bnd}",
