--- a/build.gradle
+++ b/build.gradle
@@ -113,9 +113,8 @@ allprojects {
 
   repositories {
     mavenCentral()
-    maven {
-      url 'https://dl.bintray.com/kotlin/dokka'
-    }
+    maven { url 'https://dl.bintray.com/kotlin/dokka' }
+    maven { url 'https://kotlin.bintray.com/kotlinx/' }
     google()
   }
 
