--- a/okhttp-hpacktests/build.gradle
+++ b/okhttp-hpacktests/build.gradle
@@ -1,9 +1,9 @@
 dependencies {
-  testImplementation deps.okio
-  testImplementation deps.moshi
+  testImplementation Dependencies.okio
+  testImplementation Dependencies.moshi
   testImplementation project(':okhttp')
   testImplementation project(':okhttp-testing-support')
   testImplementation project(':mockwebserver-deprecated')
-  testImplementation deps.junit
-  testImplementation deps.assertj
+  testImplementation Dependencies.junit
+  testImplementation Dependencies.assertj
 }
