--- a/build.gradle
+++ b/build.gradle
@@ -21,35 +21,10 @@ plugins {
   id "net.ltgt.errorprone" version "1.2.1"
 }
 
-/** Returns the artifact ID for the project, or null if it is not published. */
-ext.publishedArtifactId = { project ->
-  if (project.name == 'okhttp-logging-interceptor') {
-    return 'logging-interceptor'
-  } else if (project.name == 'mockwebserver') {
-    return 'mockwebserver3'
-  } else if (project.name == 'mockwebserver-junit4') {
-    return 'mockwebserver3-junit4'
-  } else if (project.name == 'mockwebserver-junit5') {
-    return 'mockwebserver3-junit5'
-  } else if (project.name == 'mockwebserver-deprecated') {
-    return 'mockwebserver'
-  } else if (project.name == 'okcurl'
-          || project.name == 'okhttp'
-          || project.name == 'okhttp-bom'
-          || project.name == 'okhttp-brotli'
-          || project.name == 'okhttp-dnsoverhttps'
-          || project.name == 'okhttp-sse'
-          || project.name == 'okhttp-tls'
-          || project.name == 'okhttp-urlconnection') {
-    return project.name
-  } else {
-    return null // Not published.
-  }
-}
 
 allprojects {
   group = 'com.squareup.okhttp3'
-  project.ext.artifactId = rootProject.ext.publishedArtifactId(project)
+  project.ext.artifactId = Projects.publishedArtifactId(project.name)
   version = '4.10.0-SNAPSHOT'
 
   task downloadDependencies() {
@@ -280,58 +255,6 @@ subprojects { project ->
 
 tasks.wrapper {
   distributionType = Wrapper.DistributionType.ALL
-}
-
-/**
- * Returns the alpn-boot version specific to this OpenJDK 8 JVM, or null if this is not a Java 8 VM.
- * https://github.com/xjdr/xio/blob/master/alpn-boot.gradle
- */
-def alpnBootVersion() {
-  def version = System.getProperty('alpn.boot.version')
-
-  if (version != null) {
-    return version
-  }
-
-  def javaVersion = System.getProperty("java.version")
-  def patchVersionMatcher = (javaVersion =~ /1\.8\.0_(\d+)(-.*)?/)
-  if (!patchVersionMatcher.find()) return null
-  def patchVersion = Integer.parseInt(patchVersionMatcher.group(1))
-  return alpnBootVersionForPatchVersion(javaVersion, patchVersion)
-}
-
-def alpnBootVersionForPatchVersion(String javaVersion, int patchVersion) {
-  // https://www.eclipse.org/jetty/documentation/current/alpn-chapter.html#alpn-versions
-  switch (patchVersion) {
-    case 0..24:
-      return '8.1.0.v20141016'
-    case 25..30:
-      return '8.1.2.v20141202'
-    case 31..50:
-      return '8.1.3.v20150130'
-    case 51..59:
-      return '8.1.4.v20150727'
-    case 60..64:
-      return '8.1.5.v20150921'
-    case 65..70:
-      return '8.1.6.v20151105'
-    case 71..77:
-      return '8.1.7.v20160121'
-    case 78..101:
-      return '8.1.8.v20160420'
-    case 102..111:
-      return '8.1.9.v20160720'
-    case 112..120:
-      return '8.1.10.v20161026'
-    case 121..160:
-      return '8.1.11.v20170118'
-    case 161..181:
-      return '8.1.12.v20180117'
-    case 191..242:
-      return '8.1.13.v20181017'
-    default:
-      throw new IllegalStateException("Unexpected Java version: ${javaVersion}")
-  }
 }
 
 /**
