--- a/build.gradle
+++ b/build.gradle
@@ -94,7 +94,7 @@ ext.publishedArtifactId = { project ->
 allprojects {
   group = 'com.squareup.okhttp3'
   project.ext.artifactId = rootProject.ext.publishedArtifactId(project)
-  version = '4.10.0-SNAPSHOT'
+  version = '5.0.0-alpha.1'
 
   repositories {
     mavenCentral()
