--- a/build.gradle
+++ b/build.gradle
@@ -190,6 +190,7 @@ subprojects { project ->
   tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
     kotlinOptions {
       jvmTarget = "1.8"
+      useIR = true
     }
   }
 
