--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,9 @@ theme:
   palette:
     primary: 'teal'
     accent: 'white'
+    scheme: 'slate'
+  features:
+  - navigation.tabs
 
 extra_css:
   - 'css/app.css'
@@ -31,6 +34,9 @@ markdown_extensions:
   - pymdownx.betterem:
       smart_enable: all
   - pymdownx.caret
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
   - pymdownx.inlinehilite
   - pymdownx.magiclink
   - pymdownx.smartsymbols
@@ -40,20 +46,26 @@ markdown_extensions:
   - tables
 
 nav:
-  - 'Overview': index.md
-  - 'Stack Overflow ⏏': https://stackoverflow.com/questions/tagged/okhttp?sort=active
-  - 'Calls': calls.md
-  - 'Caching': caching.md
-  - 'Connections': connections.md
-  - 'Events': events.md
-  - 'HTTPS': https.md
-  - 'Interceptors': interceptors.md
+  - 'Overview':
+    - 'Introduction': index.md
+    - 'Stack Overflow ⏏': https://stackoverflow.com/questions/tagged/okhttp?sort=active
+  - 'Features':
+    - 'Caching': features/caching.md
+    - 'Calls': features/calls.md
+    - 'Concurrency': features/concurrency.md
+    - 'Connections': features/connections.md
+    - 'Debug Logging': features/debug_logging.md
+    - 'Events': features/events.md
+    - 'HTTPS': features/https.md
+    - 'Interceptors': features/interceptors.md
+    - 'R8 / ProGuard': features/r8_proguard.md
   - 'Recipes': recipes.md
-  - 'Security': security.md
-  - 'Security Providers': security_providers.md
+  - 'Security':
+    - 'Security Policy': security/security.md
+    - 'Security Providers': security/security_providers.md
   - 'Works with OkHttp': works_with_okhttp.md
-  - 'Upgrading to OkHttp 4': upgrading_to_okhttp_4.md
   - '4.x API':
+    - 'Upgrading to OkHttp 4': 4.x/upgrading_to_okhttp_4.md
     - 'okhttp': 4.x/okhttp/okhttp3/index.md
     - 'brotli': 4.x/okhttp-brotli/okhttp3.brotli/index.md
     - 'dnsoverhttps': 4.x/okhttp-dnsoverhttps/okhttp3.dnsoverhttps/index.md
@@ -70,7 +82,13 @@ nav:
     - 'tls ⏏': https://square.github.io/okhttp/3.x/okhttp-tls/
     - 'urlconnection ⏏': https://square.github.io/okhttp/3.x/okhttp-urlconnection/
     - 'mockwebserver ⏏': https://square.github.io/okhttp/3.x/mockwebserver/
-  - 'Change Log': changelog.md
-  - 'Contributing': contributing.md
-  - 'Code of Conduct': code_of_conduct.md
+  - 'Change Logs':
+    - 'Latest': changelogs/changelog.md
+    - 'Version 3.x': changelogs/changelog_3x.md
+    - 'Version 2.x': changelogs/changelog_2x.md
+    - 'Version 1.x': changelogs/changelog_1x.md
+    - 'TLS History': changelogs/tls_configuration_history.md
+  - 'Contributing':
+    - 'Contribute': contribute/contributing.md
+    - 'Code of Conduct': contribute/code_of_conduct.md
 
