--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,33 @@ markdown_extensions:
   - pymdownx.tabbed
   - tables
 
+plugins:
+  - redirects:
+      redirect_maps:
+        # Redirect all feature pages to features/*
+        'caching.md': 'features/caching.md'
+        'calls.md': 'features/calls.md'
+        'concurrency.md': 'features/concurrency.md'
+        'connections.md': 'features/connections.md'
+        'debug_logging.md': 'features/debug_logging.md'
+        'events.md': 'features/events.md'
+        'https.md': 'features/events.md'
+        'interceptors.md': 'features/interceptors.md'
+        'r8_proguard.md': 'features/r8_proguard.md'
+        # Redirect all Security pages to security/*
+        'security.md': 'security/security.md'
+        'security_providers.md': 'security/security_providers.md'
+        # Redirect upgrading_to_okhttp_4 to 4.x/*
+        'upgrading_to_okhttp_4.md': '4.x/upgrading_to_okhttp_4.md'
+        # Redirect all changelog pages to changelog/*
+        'changelog.md': 'changelogs/changelog.md'
+        'changelog_3x.md': 'changelogs/changelog_3x.md'
+        'changelog_2x.md': 'changelogs/changelog_2x.md'
+        'changelog_1x.md': 'changelogs/changelog_1x.md'
+        # Redirect all contributing pages to contribute/*
+        'contributing.md': 'contribute/contributing.md'
+        'code_of_conduct.md': 'contribute/code_of_conduct.md'
+
 nav:
   - 'Overview':
     - 'Introduction': index.md
