Testing with Kotlin 1.5.0-M1

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
   dependencies {
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.30"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.0-M1"
     classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.10.1"
     classpath "com.android.tools.build:gradle:4.0.2"
     classpath Dependencies.bnd
