--- a/build.gradle
+++ b/build.gradle
@@ -155,7 +155,7 @@ subprojects { project ->
     }
   } else if (platform == "conscrypt") {
     dependencies {
-      testRuntime "org.conscrypt:conscrypt-openjdk-uber:${versions.conscrypt}"
+      testRuntime "org.conscrypt:conscrypt-openjdk-uber:${Versions.conscrypt}"
     }
   } else if (platform == "openjsse") {
     dependencies {
